# scrapers

./: .gitignore  jobs.db  pyproject.toml  tickers.json
browser/: pyproject.toml
